tests/error/match_errors/unsupported_subject_int.err
Error: Unsupported (at $FILE:7:10)
  | 
5 | @compile_guppy
6 | def main() -> None:
7 |     match qubit():
  |           ^^^^^^^ Pattern matching on qubit is not supported

Guppy compilation failed due to 1 previous error
